--- a/conda/meta.yaml
+++ b/conda/meta.yaml
@@ -19,17 +19,17 @@ requirements:
     build:
         - {{ compiler('c') }}
     host:
-        - python {{ python }}
+        - python
         - setuptools
         - numpy>=1.11
-        - cython
+        - cython>=0.29
         - pip
         - pytest-runner
     run:
         - python
-        - numpy
-        - scipy
-        - matplotlib
+        - numpy>1.11
+        - scipy>=1.3
+        - matplotlib>=2.0
         - seaborn
 
 test:
