--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,3 @@
 [build-system]
-requires = ["setuptools","wheel","numpy>=1.16.5","Cython"]
+requires = ["setuptools","wheel","numpy>1.11","Cython>=0.29"]
 build-backend = "setuptools.build_meta"
