--- a/conda/meta.yaml
+++ b/conda/meta.yaml
@@ -28,9 +28,9 @@ requirements:
     run:
         - python
         - numpy>1.11
-        - scipy>=1.3
-        - matplotlib>=2.0
-        - seaborn
+        # - scipy>=1.3
+        # - matplotlib>=2.0
+        # - seaborn
 
 test:
     imports:
