--- a/conda/meta.yaml
+++ b/conda/meta.yaml
@@ -25,6 +25,9 @@ requirements:
         - cython>=0.29
         - pip
         - pytest-runner
+        - scipy>=1.3
+        - matplotlib>=2.0
+        - seaborn
     run:
         - python
         - numpy>1.11
