--- a/conda/meta.yaml
+++ b/conda/meta.yaml
@@ -19,21 +19,18 @@ requirements:
     build:
         - {{ compiler('c') }}
     host:
-        - python {{ python }}
+        - python
         - setuptools
         - numpy>=1.11
         - cython>=0.29
         - pip
         - pytest-runner
-        - scipy>=1.3
-        - matplotlib>=2.0
-        - seaborn
     run:
         - python
         - numpy>1.11
-        # - scipy>=1.3
-        # - matplotlib>=2.0
-        # - seaborn
+        - scipy>=1.3
+        - matplotlib>=2.0
+        - seaborn
 
 test:
     imports:
