--- a/conda/meta.yaml
+++ b/conda/meta.yaml
@@ -19,14 +19,14 @@ requirements:
     build:
         - {{ compiler('c') }}
     host:
-        - python
+        - python>=2.7
         - setuptools
         - numpy>=1.11
         - cython>=0.29
         - pip
         - pytest-runner
     run:
-        - python
+        - python>=2.7
         - numpy>1.11
         - scipy>=1.3
         - matplotlib>=2.0
