--- a/conda/meta.yaml
+++ b/conda/meta.yaml
@@ -22,13 +22,13 @@ requirements:
     host:
         - python>=2.7
         - setuptools
-        - numpy>=1.11
+        - numpy>1.11
         - cython>=0.29
         - pip
         - pytest-runner
     run:
         - python>=2.7
-        - numpy>1.11
+        - {{ pin_compatible('numpy') }}
         - scipy>=1.3
         - matplotlib>=2.0
         - seaborn
