--- a/.github/workflows/deploy-conda2.yml
+++ b/.github/workflows/deploy-conda2.yml
@@ -28,6 +28,7 @@ jobs:
 
             - name: Build package
               run: |
+                  conda install -c conda-forge conda-build anaconda-client
                   conda config --set anaconda_upload yes
                   conda-build --output-folder . .
               env:
