--- a/.github/workflows/deploy-conda2.yml
+++ b/.github/workflows/deploy-conda2.yml
@@ -27,10 +27,11 @@ jobs:
               uses: actions/checkout@v2
 
             - name: Build package
+              shell: bash -l {0}
               run: |
                   conda install -c conda-forge conda-build anaconda-client
                   conda config --set anaconda_upload yes
-                  conda-build --output-folder . .
+                  $(conda info --root)/bin/conda-build --output-folder . .
               env:
                   CYTHON_BUILD_IN_SOURCE: 'true'  # see setup.py. Avoids a bug when building with multiple python variants
                   ANACONDA_API_TOKEN: ${{ secrets.ANACONDA_TOKEN }}
