--- a/conda/meta.yaml
+++ b/conda/meta.yaml
@@ -13,7 +13,8 @@ source:
 
 build:
     number: 0
-    script: python setup.py install
+    script: {{ PYTHON }} -m pip install . --single-version-externally-managed --record=record.txt --no-deps --ignore-installed --no-cache-dir -vvv
+    # script: python setup.py install
     # script: "{{ PYTHON }} -m pip install . -vv"
 
 requirements:
