--- a/.github/workflows/build-macos.yml
+++ b/.github/workflows/build-macos.yml
@@ -1,9 +1,9 @@
 name: build-macos
 
 on:
-    # push:
-    #     branches:
-    #         - main
+    push:
+        branches:
+            - main
     release:
         types: 
             - published
@@ -15,7 +15,7 @@ jobs:
         strategy:
             fail-fast: false
             matrix:
-                python-version: ['3.6', '3.7', '3.8', '3.9', '3.10']
+                python-version: ['3.7', '3.8', '3.9', '3.10', '3.11']
 
         steps:
             - name: Checkout
@@ -45,7 +45,7 @@ jobs:
             #       cuda: '11.7.0'
 
             - name: Install package and dependencies
-              if: matrix.python-version != '3.10'
+              if: (matrix.python-version != '3.10') && (matrix.python-version != '3.11')
               run: |
                   python -m pip install --upgrade pip
                   python -m pip install --upgrade numpy
@@ -56,9 +56,9 @@ jobs:
                   USE_CBLAS: 0
                   USE_CUDA: 0
 
-            # For python 3.10, do not install extras (sparsesuite)
+            # For python 3.10, 3.11 do not install extras (sparsesuite)
             - name: Install package and dependencies
-              if: matrix.python-version == '3.10'
+              if: (matrix.python-version == '3.10') || (matrix.python-version == '3.11')
               run: |
                   python -m pip install --upgrade pip
                   python -m pip install --upgrade numpy
